arc-actions/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: arc-actions
  labels:
    pod-security.kubernetes.io/enforce: privileged
