arc-actions/arc-actions-runner-webhook-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arc-actions-runner-webhook
  namespace: arc-actions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arc-actions-runner-webhook
  template:
    metadata:
      labels:
        app: arc-actions-runner-webhook
    spec:
      serviceAccountName: arc-actions-runner-webhook
      imagePullSecrets:
        - name: ghcr-pull
      containers:
        - name: controller
          image: ghcr.io/guilhermelinosp/runner-controller:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
