arc-actions/pre-pull-daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: pre-pull-runner
  namespace: arc-actions
  labels:
    app: pre-pull-runner
spec:
  selector:
    matchLabels:
      app: pre-pull-runner
  template:
    metadata:
      labels:
        app: pre-pull-runner
    spec:
      securityContext:
        runAsUser: 0
      containers:
        - name: pause
          image: gcr.io/google_containers/pause:latest
