arc-actions/arc-actions-runner-webhook-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: arc-actions-runner-webhook
  namespace: arc-actions
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: arc-actions-runner-webhook
