arc-actions/httproute-webhook.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook
  namespace: arc-actions
spec:
  hostnames:
    - webhook.hellnet.com.br
  parentRefs:
    - name: pve
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: arc-actions-runner-webhook
          port: 80
